# wrf-rs

./: .gitignore  AGENTS.md  CURRENT_STATE.md  Cargo.toml  PERFORMANCE_PARITY.md  PORT_STATUS.md  README.md  RUST_BACKEND_STYLE_GUIDE.md  TEST_COVERAGE.md  UPSTREAM.toml  UPSTREAM_FINDINGS.md
crates/wrf-compute/: Cargo.toml
crates/wrf-compute/src/: backend_kind.rs  compute_backend.rs  compute_error.rs  cpu_backend.rs  cpu_field.rs  field_storage.rs  field_value.rs  grid_shape.rs  lib.rs  linear_chunk.rs
crates/wrf-dynamics/: Cargo.toml
crates/wrf-dynamics/benches/: acoustic_boundary_stage.rs  acoustic_flux_accumulation.rs  acoustic_horizontal_momentum.rs  acoustic_mass_theta.rs  acoustic_pressure.rs  acoustic_step_preparation.rs  acoustic_vertical_momentum.rs  column_mass_staggering.rs  dry_boundary_relaxation.rs  dry_boundary_tendencies.rs  dry_large_step_boundary_stage.rs  dry_tendency_assembly.rs  dry_tendency_boundary_stage.rs  flow_dependent_boundary.rs  flow_dependent_inflow_policies.rs  held_suarez.rs  inverse_density.rs  moisture_coefficients.rs  momentum_coupling.rs  omega_diagnosis.rs  physical_boundary.rs  positive_definite.rs  pressure_point_geopotential.rs  runge_kutta_preparation.rs  specified_boundary_finalization.rs  specified_boundary_geopotential.rs  specified_boundary_relaxation.rs  specified_boundary_tendencies.rs  specified_boundary_update.rs  vertical_acoustic_coefficients.rs  zero_gradient_boundary.rs
crates/wrf-dynamics/benches/support/: acoustic_boundary_stage_fixture.rs
crates/wrf-dynamics/examples/: measure_acoustic_boundary_stage_allocations.rs  measure_acoustic_flux_accumulation_allocations.rs  measure_acoustic_pressure_allocations.rs  measure_acoustic_step_preparation_allocations.rs  measure_column_mass_staggering_allocations.rs  measure_dry_large_step_boundary_stage_allocations.rs  measure_dry_tendency_assembly_allocations.rs  measure_held_suarez_allocations.rs  measure_inverse_density_allocations.rs  measure_moisture_coefficient_allocations.rs  measure_momentum_coupling_allocations.rs  measure_omega_diagnosis_allocations.rs  measure_physical_boundary_allocations.rs  measure_positive_definite_allocations.rs  measure_pressure_point_geopotential_allocations.rs  measure_runge_kutta_preparation_allocations.rs  measure_specified_boundary_geopotential_allocations.rs  measure_specified_boundary_update_allocations.rs  measure_vertical_acoustic_coefficient_allocations.rs
crates/wrf-dynamics/src/: cpu_positive_definite_kernels.rs  lib.rs  positive_definite_kernels.rs
crates/wrf-dynamics/test-data/: acoustic_flux_accumulation.out.correct  acoustic_horizontal_momentum.out.correct  acoustic_mass_theta.out.correct  acoustic_pressure.out.correct  acoustic_step_preparation.out.correct  acoustic_trajectory.out.correct  acoustic_vertical_momentum.out.correct  column_mass_staggering.out.correct  dry_boundary_relaxation.out.correct  dry_boundary_tendencies.out.correct  dry_large_step_boundary_stage.out.correct  dry_tendency_assembly.out.correct  dry_tendency_boundary_stage.out.correct  flow_dependent_boundary.out.correct  flow_dependent_inflow_policies.out.correct  held_suarez_damp.out.correct  inverse_density.out.correct  moisture_coefficients.out.correct  momentum_coupling.out.correct  omega_diagnosis.out.correct  periodic_column_mass.out.correct  physical_boundary.out.correct  positive_definite_sheet.out.correct  positive_definite_slab.out.correct  pressure_point_geopotential.out.correct  runge_kutta_preparation.out.correct  specified_boundary_finalization.out.correct  specified_boundary_geopotential.out.correct  specified_boundary_relaxation.out.correct  specified_boundary_tendencies.out.correct  specified_boundary_update.out.correct  vertical_acoustic_coefficients.out.correct  zero_gradient_boundary.out.correct
crates/wrf-io/: Cargo.toml
crates/wrf-io/examples/: minimal_restart_oracle.rs  netcdf_field_benchmark.rs
crates/wrf-io/src/: error.rs  lib.rs
crates/wrf-model/: Cargo.toml
crates/wrf-model/benches/: registry_backed_arw_trajectory.rs
crates/wrf-model/examples/: measure_registry_backed_arw_trajectory_allocations.rs  registry_backed_arw_trajectory_oracle.rs
crates/wrf-model/src/: coefficients.rs  controls.rs  error.rs  geometry.rs  lib.rs  model.rs  registry_binding.rs  stage.rs  state.rs  workspace.rs  workspace_column_field.rs  workspace_volume_field.rs
crates/wrf-model/tests/: registry_backed_arw_trajectory_fixture.rs
crates/wrf-physics/: Cargo.toml
crates/wrf-physics/benches/: kessler_microphysics.rs  kessler_precipitation_trajectory.rs
crates/wrf-physics/examples/: kessler_oracle.rs  kessler_precipitation_trajectory_oracle.rs  measure_kessler_allocations.rs  measure_kessler_precipitation_trajectory_allocations.rs  microphysics_driver_oracle.rs  registry_package_oracle.rs
crates/wrf-physics/src/: lib.rs
crates/wrf-registry/: Cargo.toml
crates/wrf-registry/src/: lib.rs  registry_source_error.rs  source_location.rs
(+956 files in other folders)
