[workspace]
members = [
    "crates/wrf-compute",
    "crates/wrf-dynamics",
    "crates/wrf-time",
    "tools/arw-corpus-generator",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
