[package]
name = "wrf-dynamics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parity-tested WRF dynamical-core numerical kernels"

[lints]
workspace = true

[dependencies]
wrf-compute = { path = "../wrf-compute" }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "positive_definite"
harness = false
