[package]
name = "wrf-dynamics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parity-tested WRF dynamical-core numerical kernels"

[lints]
workspace = true

[dependencies]
pulp = "0.22.3"
wrf-compute = { path = "../wrf-compute" }

[dev-dependencies]
criterion = "0.7"
stats_alloc = "0.1.10"

[[bench]]
name = "positive_definite"
harness = false

[[bench]]
name = "held_suarez"
harness = false
