[package]
name = "wrf-dynamics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Parity-tested WRF dynamical-core numerical kernels"

[lints]
workspace = true

[dependencies]
pulp = "0.22.3"
wrf-compute = { path = "../wrf-compute" }

[dev-dependencies]
criterion = "0.7"
stats_alloc = "0.1.10"

[[bench]]
name = "positive_definite"
harness = false

[[bench]]
name = "held_suarez"
harness = false

[[bench]]
name = "column_mass_staggering"
harness = false

[[bench]]
name = "momentum_coupling"
harness = false

[[bench]]
name = "omega_diagnosis"
harness = false

[[bench]]
name = "moisture_coefficients"
harness = false

[[bench]]
name = "inverse_density"
harness = false

[[bench]]
name = "pressure_point_geopotential"
harness = false

[[bench]]
name = "runge_kutta_preparation"
harness = false

[[bench]]
name = "dry_tendency_assembly"
harness = false

[[bench]]
name = "acoustic_step_preparation"
harness = false

[[bench]]
name = "acoustic_pressure"
harness = false

[[bench]]
name = "vertical_acoustic_coefficients"
harness = false

[[bench]]
name = "acoustic_horizontal_momentum"
harness = false

[[bench]]
name = "acoustic_mass_theta"
harness = false

[[bench]]
name = "acoustic_vertical_momentum"
harness = false
